examples/test/testpolicy9011.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9011
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key27: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value11
          key7: value16
          key2: value25
      podSelector:
        matchLabels:
          key44: value6
          key3: value39
